--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,22 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+
     // rest-assured для тестирования API
     testImplementation 'io.rest-assured:rest-assured:5.5.1'
 
     testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.19.0'
 
     testImplementation 'io.qameta.allure:allure-rest-assured:2.29.1'
+
+    // Lombok - 4 строки
+    compileOnly 'org.projectlombok:lombok:1.18.32'
+    annotationProcessor 'org.projectlombok:lombok:1.18.32'
+    testCompileOnly 'org.projectlombok:lombok:1.18.32'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
+
+    // AssertJ ( assertThat etc )
+    implementation 'org.assertj:assertj-core:3.27.3'
 }
 
 test {
